# codenames-AI

./: .gitignore  Cargo.toml  README.MD  requirements.txt  setup.py
ai_tools/: __init__.py  download.py  main.py  model.py  model_bkup.py  settings.py
data/: google-10000-english-filtered.txt
docker/: Dockerfile
src/: agent.rs  ai.rs  clue.rs  common.rs  constants.rs  main.rs  model.py  prompting.rs  settings.rs  spymaster.rs  utils.rs  word_board.rs
src/ai/: mistral.rs  mod.rs  prompting.rs
src/data/: constants.rs  mod.rs  wordlist.rs
src/models/: base.rs  mistral.rs  mod.rs
